force-app-privacy/main/default/objects/Account/fields/Account_Name_Masked__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Masked__c</fullName>
    <label>Account Name (Masked)</label>
    <type>Text</type>
    <formula>IF(
  $Permission.View_Sensitive_Data,
  Name,
  IF(LEN(Name) &gt; 1, LEFT(Name, 1) &amp; &quot;****&quot;, &quot;****&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>