force-app-privacy/main/default/objects/Account/fields/Billing_City_Masked__c.field-meta.xml
<CustomField>
    <fullName>Billing_City_Masked__c</fullName>
    <label>Billing City (Masked)</label>
    <type>Text</type>
    <formula>IF(
  $Permission.View_Sensitive_Data,
  BillingCity,
  &quot;***&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>