force-app-privacy/main/default/objects/Account/fields/Billing_Street_Masked__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Masked__c</fullName>
    <label>Billing Street (Masked)</label>
    <type>Text</type>
    <formula>IF(
  $Permission.View_Sensitive_Data,
  BillingStreet,
  &quot;*** Masked Address ***&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>