force-app-privacy/main/default/objects/Account/fields/Phone_Masked__c.field-meta.xml
<CustomField>
    <fullName>Phone_Masked__c</fullName>
    <label>Phone (Masked)</label>
    <type>Text</type>
    <formula>IF(
  $Permission.View_Sensitive_Data,
  Phone,
  IF(LEN(Phone) &gt; 4, &quot;***-***-&quot; &amp; RIGHT(Phone, 4), &quot;***-****&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>